assets/scss/f/_hero.scss
$carousel-arrow-color:             stencilColor("carousel-arrow-color");
$carousel-arrow-prev:              url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='42' viewBox='0 0 24 42'%3E%3Cpath d='M22.4572074 1.00746147l-21 20.02482143 20.9479397 19.9751786' stroke='#{str-replace(#{$carousel-arrow-color}, "#", "%23")}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' fill='none' fill-rule='evenodd' /%3E%3C/svg%3E");
$carousel-arrow-next:              url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='42' viewBox='0 0 24 42'%3E%3Cpath d='M1.45679 1.00746147l21 20.02482143L1.50885 41.0074615' stroke='#{str-replace(#{$carousel-arrow-color}, "#", "%23")}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' fill='none' fill-rule='evenodd' /%3E%3C/svg%3E");

.heroCarousel {
    margin-top: spacing("single");

    .slick-prev:before {
        background-image: $carousel-arrow-prev;
    }

    .slick-next:before {
        background-image: $carousel-arrow-next;
    }

    .slick-dots {
        bottom: remCalc(-30);
    }

    .slick-dots li {
        background-color:  transparent;
    }

    a {
        text-decoration: none;
    }

    .slick-arrow {
        display: none;

        @include breakpoint("medium") {
            display: block;
        }
    }
}

.heroStoryboard {
    @include clearfix;
    margin-bottom: spacing("single");

    &.show--2 {
        .heroCarousel-slide + .heroCarousel-slide {
            margin-top: spacing("single");
        }

        @include breakpoint("small") {
            .heroCarousel-slide {
                float: left;
                width: calc(50% - 0.75rem);

                + .heroCarousel-slide {
                    margin-left: spacing("single");
                    margin-top: 0;
                }
            }
        }
    }
}

.heroCarousel-slide {
    background-color: stencilColor("carousel-bgColor");

    @include breakpoint("medium") {
        background-color: transparent;
    }
}

.heroCarousel-slide a {
    display: block;
    height: 100%;
}

.heroCarousel-content {
    padding: spacing("single") * 1.5 spacing("single");

    @include breakpoint("medium") {
        background-color: rgba(stencilColor("carousel-bgColor"),0.7);
        padding: spacing("single") * 1.5;
        width: 80%;

        .slide--0 &,
        .slick-slide & {
            width: 40%;
        }

        .left & {
            left: spacing("double");
            right: auto;
            text-align: left;

            .slick-slide & {
                left: spacing("double")*3;
            }
        }

        .right & {
            left: auto;
            right: spacing("double");
            text-align: left;

            .slick-slide & {
                right: spacing("double")*3;
            }
        }
    }
}

.heroCarousel-title {
    // font-weight: fontWeight("normal");
    text-transform: uppercase;

    @include breakpoint("medium") {
        font-size: fontSize("largest");
    }
}

.heroCarousel-description {
    font-family: $secondary-font-family;
    font-style: $secondary-font-style;
    font-weight: stencilFontWeight("secondary-font");
}

.heroCarousel-action {
    color: stencilColor("carousel-description-color");
    text-decoration: underline;
    text-transform: uppercase;
}

.heroCarousel-content,
.heroCarousel-image-wrapper {
    @media (max-width: 800px) {
        position: relative;
    }
}

.heroCarousel-image {
    @include breakpoint("medium") {
        height: 100%;
    }
}

.heroCarousel.slick-dotted.slick-slider {
    margin-bottom: spacing("double");
}

